[gd_scene load_steps=2 format=3 uid="uid://5rdylvfvlnug"]

[ext_resource type="Script" uid="uid://dri43cxvsrb4t" path="res://QuestionUI.gd" id="1_bt01t"]

[node name="QuestionUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bt01t")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 158.0
offset_bottom = 62.0
mouse_filter = 0

[node name="QuestionTextLabel" type="Label" parent="MainContainer"]
layout_mode = 2

[node name="QuestionImage" type="TextureRect" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
stretch_mode = 5

[node name="AnswerOptionsContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
alignment = 1

[node name="AnswerLineEdit" type="LineEdit" parent="MainContainer"]
visible = false
layout_mode = 2
placeholder_text = "Įveskite atsakymą..."

[node name="SubmitButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "===PATVIRTINTI==="

[node name="FeedbackLabel" type="Label" parent="MainContainer"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="FeedbackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
